--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,7 +38,29 @@ h1 {
   display: flex;
   flex-direction: column;
   width: 100%;
-  /*row-gap: 5px;*/
+  border: 1px solid black;
+  border-radius: 20px;
+  padding: 10px;
+}
+
+#container-clear-grid {
+  border: 0px;
+}
+
+#container-hide-lines {
+  border: 0px;
+}
+
+.options label {
+  font-size: 18px;
+  font-weight: bold;
+  color: rgb(8, 92, 8);
+}
+
+.options button {
+  border-radius: 20px;
+  background-color: #7c71cf;
+  color: white;
 }
 
 .options > div > label,
@@ -79,7 +101,11 @@ h1 {
   min-height: 100%;
   max-height: 100%;
   display: grid;
-  grid-template: repeat(10, 1fr) / repeat(10, 1fr);
+  grid-template: repeat(10, 1fr) / repeat(10, 1fr);  
   border: 3px solid red;
+}
+
+.cells-container > div {
+  border: 1px solid rgb(202, 202, 202);  
 }
 
